2015-05-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.9 release procedure:
 	Changes since nco-4.4.8: git, -x warn, crd att, cnk nco lfp, shuffle on, MM3->MM4 off
	cd ~/nco;git commit -a -m "Version nco-4.4.9 release: "
	git tag -d nco-4.4.9;git push origin :refs/tags/nco-4.4.9
	git tag -a nco-4.4.9 -m 'Version 4.4.9: ';git push --tags

	* Shuffle never, to my knowledge, increases filesize, so shuffle by default when manually deflating

	* LFP chunking uses "reasonable defaults" when var_sz < cnk_sz_ttl

	* Turn-off MM3 workaround for MM3->MM4 copying to speed-up compression induced chunking

	* Choose output chunking map/policy = rew/all rather than xst/xst for netCDF3 input

2015-05-13  Charlie Zender  <zender@uci.edu>

	* Split Tempest library calls into separate function, nco_rgr_tps()

2015-05-12  Charlie Zender  <zender@uci.edu>

	* Improve error message when nco_lmt.c encounters hyperslab requests on 2-D "coordinates"

2015-05-11  Charlie Zender  <zender@uci.edu>

	* Crude version of nco_rgr_map()

2015-05-07  Charlie Zender  <zender@uci.edu>

	* Describe SCRIP remapping in nco_rgr.c

2015-05-06  Charlie Zender  <zender@uci.edu>

	* Segregate parts of nco_sld.[ch] into nco_ppc.[ch] and nco_rgr.[ch]

2015-05-05  Charlie Zender  <zender@uci.edu>

	* Situate nco_rgr_ctl() between main() and all regridding routines

2015-05-04  Charlie Zender  <zender@uci.edu>

	* Tidy string functions by DYW and PVN

	* Makefile generates LINUX_C?? compiler defaults for MACOSX

2015-04-30  Charlie Zender  <zender@uci.edu>

	* Introduce special variable handling with --rgr_var

	* Wait until after ESMC_Finalize() to free dynamic memory provided to ESMF

2015-04-27  Charlie Zender  <zender@uci.edu>

	* Improve nco_rgr_esmf() genericity

2015-04-26  Charlie Zender  <zender@uci.edu>

	* Refine MACOSX linking for libesmf.a

	* Fix bug in call to ESMC_GridCreateFromFile(). Simple ESMF regridding works.

2015-04-23  Charlie Zender  <zender@uci.edu>
